--- a/sorting_searching/quick_sort/quick_sort_solution.ipynb
+++ b/sorting_searching/quick_sort/quick_sort_solution.ipynb
@@ -2,30 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "This notebook was prepared by [Donne Martin](http://donnemartin.com). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Solution Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Problem: Implement quick sort.\n",
     "\n",
@@ -39,10 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Constraints\n",
     "\n",
@@ -58,10 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Test Cases\n",
     "\n",
@@ -73,10 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Algorithm\n",
     "\n",
@@ -110,10 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Code"
    ]
@@ -121,11 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import division\n",
@@ -162,10 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Unit Test\n",
     "\n"
@@ -174,11 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -226,11 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -248,27 +212,118 @@
    "source": [
     "%run -i test_quick_sort.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Null input\n",
+      "Empty input\n",
+      "One element\n",
+      "Two or more elements\n",
+      "Success: testQuicksort\n"
+     ]
+    }
+   ],
+   "source": [
+    "//# %load quickSort.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class QuickSort {\n",
+    "\n",
+    "  sort(data) {\n",
+    "    if (data === null || data === undefined) {\n",
+    "      throw new TypeError('data cannot be null');\n",
+    "    }\n",
+    "    return this._sort(data);\n",
+    "  }\n",
+    "\n",
+    "  _sort(data) {\n",
+    "    if (data.length < 2) {\n",
+    "      return data;\n",
+    "    }\n",
+    "    const equal = [];\n",
+    "    const left = [];\n",
+    "    const right = [];\n",
+    "    let pivotIndex = Math.floor(data.length/2);\n",
+    "    let pivotValue = data[pivotIndex];\n",
+    "    data.forEach(item => {\n",
+    "      if (item === pivotValue) {\n",
+    "        equal.push(item);\n",
+    "      } else if (item < pivotValue) {\n",
+    "        left.push(item);\n",
+    "      } else {\n",
+    "        right.push(item);\n",
+    "      }\n",
+    "    });\n",
+    "    const left_ = this._sort(left);\n",
+    "    const right_ = this._sort(right);\n",
+    "    return left_.concat(equal, right_);\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestQuickSort {\n",
+    "\n",
+    "  testQuickSort() {\n",
+    "    const quickSort = new QuickSort();\n",
+    "\n",
+    "    console.log('Null input');\n",
+    "    assert.throws(() => quickSort.sort(null), TypeError);\n",
+    "\n",
+    "    console.log('Empty input');\n",
+    "    assert.deepEqual(quickSort.sort([]), []);\n",
+    "\n",
+    "    console.log('One element');\n",
+    "    assert.deepEqual(quickSort.sort([5]), [5]);\n",
+    "\n",
+    "    console.log('Two or more elements');\n",
+    "    const data = [5, 1, 7, 2, 6, -3, 5, 7, -1];\n",
+    "    assert.deepEqual(quickSort.sort(data), data.sort((a, b) => a - b));\n",
+    "\n",
+    "    console.log('Success: testQuicksort');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestQuickSort();\n",
+    "  test.testQuickSort();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
