Update graph solutions.

--- a/graphs_trees/graph/graph_solution.ipynb
+++ b/graphs_trees/graph/graph_solution.ipynb
@@ -359,25 +359,188 @@
    "source": [
     "%run -i test_graph.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: testGraph\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{ Graph: [Function: Graph],\n",
+       "  STATE: { UNVISITED: 0, VISTITING: 1, VISITED: 2 } }"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "//# %load graph.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "const STATE = {\n",
+    "  UNVISITED: 0,\n",
+    "  VISTITING: 1,\n",
+    "  VISITED: 2\n",
+    "};\n",
+    "\n",
+    "class Node {\n",
+    "\n",
+    "  constructor(key) {\n",
+    "    this.key = key;\n",
+    "    this.visitState = STATE.UNVISITED;\n",
+    "    this.incomingEdges = 0;\n",
+    "    this.adjNodes = {};\n",
+    "    this.adjWeights = {};\n",
+    "  }\n",
+    "\n",
+    "  toString() {\n",
+    "    return String(this.key);\n",
+    "  }\n",
+    "\n",
+    "  addNeighbor(neighbor, weight=0) {\n",
+    "    if (neighbor === null || weight === null) {\n",
+    "      throw TypeError('neighbor or weight cannot be null');\n",
+    "    }\n",
+    "    neighbor.incomingEdges += 1;\n",
+    "    this.adjWeights[neighbor.key] = weight;\n",
+    "    this.adjNodes[neighbor.key] = neighbor;\n",
+    "  }\n",
+    "\n",
+    "  removeNeighbor(neighbor) {\n",
+    "    if (neighbor === null) {\n",
+    "      throw TypeError('neighbor cannot be null');\n",
+    "    }\n",
+    "    if (!(neighbor.key in this.adjNodes)) {\n",
+    "      throw TypeError('neighbor not found');\n",
+    "    }\n",
+    "    neighbor.incomingEdges -= 1;\n",
+    "    delete this.adjWeights[neighbor.key];\n",
+    "    delete this.adjNodes[neighbor.key];\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class Graph {\n",
+    "\n",
+    "  constructor() {\n",
+    "    this.nodes = {};\n",
+    "  }\n",
+    "\n",
+    "  addNode(key) {\n",
+    "    if (key === null) {\n",
+    "      throw new TypeError('key cannot be null');\n",
+    "    }\n",
+    "    if (!(key in this.nodes)) {\n",
+    "      this.nodes[key] = new Node(key);\n",
+    "    }\n",
+    "    return this.nodes[key];\n",
+    "  }\n",
+    "\n",
+    "  addEdge(sourceKey, destKey, weight=0) {\n",
+    "    if (sourceKey === null || destKey === null) {\n",
+    "      throw new TypeError('key cannot be null');\n",
+    "    }\n",
+    "    if (!(sourceKey in this.nodes)) {\n",
+    "      this.addNode(sourceKey);\n",
+    "    }\n",
+    "    if (!(destKey in this.nodes)) {\n",
+    "      this.addNode(destKey);\n",
+    "    }\n",
+    "    this.nodes[sourceKey].addNeighbor(this.nodes[destKey], weight);\n",
+    "  }\n",
+    "\n",
+    "  addUndirectedEdge(srcKey, dstKey, weight=0) {\n",
+    "    if (srcKey === null || dstKey === null) {\n",
+    "      throw new TypeError('key cannot be None');\n",
+    "    }\n",
+    "    this.addEdge(srcKey, dstKey, weight);\n",
+    "    this.addEdge(dstKey, srcKey, weight);\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestGraph {\n",
+    "\n",
+    "  createGraph() {\n",
+    "    const graph = new Graph();\n",
+    "    for (let key in [...Array(6)]) {\n",
+    "      graph.addNode(key);\n",
+    "    }\n",
+    "    return graph;\n",
+    "  }\n",
+    "\n",
+    "  testGraph() {\n",
+    "    const graph = this.createGraph();\n",
+    "    graph.addEdge(0, 1, 5);\n",
+    "    graph.addEdge(0, 5, 2);\n",
+    "    graph.addEdge(1, 2, 3);\n",
+    "    graph.addEdge(2, 3, 4);\n",
+    "    graph.addEdge(3, 4, 5);\n",
+    "    graph.addEdge(3, 5, 6);\n",
+    "    graph.addEdge(4, 0, 7);\n",
+    "    graph.addEdge(5, 4, 8);\n",
+    "    graph.addEdge(5, 2, 9);\n",
+    "\n",
+    "    assert.equal(graph.nodes[0].adjWeights[graph.nodes[1].key], 5);\n",
+    "    assert.equal(graph.nodes[0].adjWeights[graph.nodes[5].key], 2);\n",
+    "    assert.equal(graph.nodes[1].adjWeights[graph.nodes[2].key], 3);\n",
+    "    assert.equal(graph.nodes[2].adjWeights[graph.nodes[3].key], 4);\n",
+    "    assert.equal(graph.nodes[3].adjWeights[graph.nodes[4].key], 5);\n",
+    "    assert.equal(graph.nodes[3].adjWeights[graph.nodes[5].key], 6);\n",
+    "    assert.equal(graph.nodes[4].adjWeights[graph.nodes[0].key], 7);\n",
+    "    assert.equal(graph.nodes[5].adjWeights[graph.nodes[4].key], 8);\n",
+    "    assert.equal(graph.nodes[5].adjWeights[graph.nodes[2].key], 9);\n",
+    "    console.log('Success: testGraph');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestGraph();\n",
+    "  test.testGraph();\n",
+    "}\n",
+    "main();\n",
+    "\n",
+    "module.exports = {\n",
+    "  Graph,\n",
+    "  STATE\n",
+    "};\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
