--- a/graphs_trees/graph_bfs/bfs_solution.ipynb
+++ b/graphs_trees/graph_bfs/bfs_solution.ipynb
@@ -2,30 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "This notebook was prepared by [Donne Martin](https://github.com/donnemartin). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Solution Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Problem: Implement breadth-first search on a graph.\n",
     "\n",
@@ -38,10 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Constraints\n",
     "\n",
@@ -59,10 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Test Cases\n",
     "\n",
@@ -86,10 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Algorithm\n",
     "\n",
@@ -113,10 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Code"
    ]
@@ -125,9 +104,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -162,10 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Unit Test"
    ]
@@ -174,9 +148,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -250,25 +222,106 @@
    "source": [
     "%run -i test_bfs.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: testGraph\n",
+      "Success: testbfs\n"
+     ]
+    }
+   ],
+   "source": [
+    "//# %load graph_bfs.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "const { Graph, STATE } = require('../graph/graph');\n",
+    "\n",
+    "class GraphBfs extends Graph {\n",
+    "\n",
+    "  bfs(root, result) {\n",
+    "    if (root === null) {\n",
+    "      return null;\n",
+    "    }\n",
+    "    const queue = [];\n",
+    "    queue.push(root);\n",
+    "    root.visitState = STATE.VISITED;\n",
+    "    while (queue.length > 0) {\n",
+    "      const node = queue.shift();\n",
+    "      result.push(Number(node.toString()));\n",
+    "      for (let key in node.adjNodes) {\n",
+    "        if (node.adjNodes[key].visitState === STATE.UNVISITED) {\n",
+    "          queue.push(node.adjNodes[key]);\n",
+    "          node.adjNodes[key].visitState = STATE.VISITED;\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "    return result;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestBfs {\n",
+    "\n",
+    "  testbfs() {\n",
+    "    const nodes = [];\n",
+    "    const result = [];\n",
+    "    const graph = new GraphBfs();\n",
+    "    for (let id in [...Array(6)]) {\n",
+    "      nodes.push(graph.addNode(id));\n",
+    "    }\n",
+    "    graph.addEdge(0, 1, 5);\n",
+    "    graph.addEdge(0, 4, 3);\n",
+    "    graph.addEdge(0, 5, 2);\n",
+    "    graph.addEdge(1, 3, 5);\n",
+    "    graph.addEdge(1, 4, 4);\n",
+    "    graph.addEdge(2, 1, 6);\n",
+    "    graph.addEdge(3, 2, 7);\n",
+    "    graph.addEdge(3, 4, 8);\n",
+    "    graph.bfs(nodes[0], result);\n",
+    "    assert.deepEqual(result, [0, 1, 4, 5, 3, 2]);\n",
+    "    console.log('Success: testbfs');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestBfs();\n",
+    "  test.testbfs();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
