--- a/math_probability/add_digits/add_digits_solution.ipynb
+++ b/math_probability/add_digits/add_digits_solution.ipynb
@@ -89,9 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Solution(object):\n",
@@ -134,9 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -182,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -198,27 +192,132 @@
    "source": [
     "%run -i test_add_digits.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testAddDigits\n",
+      "Success: testAdddigits\n",
+      "testAddDigitsOptimized\n",
+      "Success: testAdddigitsOptimized\n"
+     ]
+    }
+   ],
+   "source": [
+    "//# %load addDigits.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class Solution {\n",
+    "\n",
+    "  addDigits(num) {\n",
+    "    if (num === null || num === undefined) {\n",
+    "      throw new TypeError('num cannot be null');\n",
+    "    }\n",
+    "    if (num < 0) {\n",
+    "      throw new Error('num cannot be negative');\n",
+    "    }\n",
+    "    if (num === 0) {\n",
+    "      return num;\n",
+    "    }\n",
+    "    const digits = [];\n",
+    "    while (num !== 0) {\n",
+    "      digits.push(num % 10);\n",
+    "      num = Math.floor(num / 10);\n",
+    "    }\n",
+    "    const digitSum = digits.reduce((total, val) => total + val);\n",
+    "    if (digitSum >= 10) {\n",
+    "      return this.addDigits(digitSum);\n",
+    "    } else {\n",
+    "      return digitSum;\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  addDigitsOptimized(num) {\n",
+    "    if (num === null || num === undefined) {\n",
+    "      throw new TypeError('num cannot be null');\n",
+    "    }\n",
+    "    if (num < 0) {\n",
+    "      throw new Error('num cannot be negative');\n",
+    "    }\n",
+    "    if (num === 0) {\n",
+    "      return num;\n",
+    "    } else if (num % 9 === 0) {\n",
+    "      return 9;\n",
+    "    } else {\n",
+    "      return num % 9;\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestAddDigits {\n",
+    "\n",
+    "  testAddDigits() {\n",
+    "    console.log('testAddDigits');\n",
+    "    const solution = new Solution();\n",
+    "    assert.throws(() => solution.addDigits(null), TypeError);\n",
+    "    assert.throws(() => solution.addDigits(-1), Error);\n",
+    "    assert.equal(solution.addDigits(0), 0);\n",
+    "    assert.equal(solution.addDigits(9), 9);\n",
+    "    assert.equal(solution.addDigits(138), 3);\n",
+    "    assert.equal(solution.addDigits(65536), 7);\n",
+    "    console.log('Success: testAdddigits');\n",
+    "  }\n",
+    "\n",
+    "  testAddDigitsOptimized() {\n",
+    "    console.log('testAddDigitsOptimized');\n",
+    "    const solution = new Solution();\n",
+    "    assert.throws(() => solution.addDigitsOptimized(null), TypeError);\n",
+    "    assert.throws(() => solution.addDigitsOptimized(-1), Error);\n",
+    "    assert.equal(solution.addDigitsOptimized(0), 0);\n",
+    "    assert.equal(solution.addDigitsOptimized(9), 9);\n",
+    "    assert.equal(solution.addDigitsOptimized(138), 3);\n",
+    "    assert.equal(solution.addDigitsOptimized(65536), 7);\n",
+    "    console.log('Success: testAdddigitsOptimized');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestAddDigits();\n",
+    "  test.testAddDigits();\n",
+    "  test.testAddDigitsOptimized();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
